// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/select/SelectDropdown Aucune Option Selectionee 1`] = `
<button
  aria-expanded={false}
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 text-left text-sm"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
  toggleOpen={[Function]}
>
  <span
    className="mr-auto text-gray-500 italic line-clamp-1"
  >
    
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
  />
</button>
`;

exports[`Storyshots ui/shared/select/SelectDropdown Avec Placeholder 1`] = `
<button
  aria-expanded={false}
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 text-left text-sm"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
  toggleOpen={[Function]}
>
  <span
    className="mr-auto text-gray-500 italic line-clamp-1"
  >
    Sélectionner une option
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
  />
</button>
`;

exports[`Storyshots ui/shared/select/SelectDropdown Custom Option Et Selection 1`] = `
<button
  aria-expanded={false}
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 text-left text-sm"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
  toggleOpen={[Function]}
>
  <span
    className="mr-auto py-1 px-2 rounded bg-teal-600 text-white"
  >
    option2
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
  />
</button>
`;

exports[`Storyshots ui/shared/select/SelectDropdown Option Selectionee 1`] = `
<button
  aria-expanded={false}
  aria-label="ouvrir le menu"
  className="flex items-center w-full p-2 text-left text-sm"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onPointerDown={[Function]}
  toggleOpen={[Function]}
>
  <span
    className="mr-auto flex line-clamp-1"
  >
    Option 2
  </span>
  <span
    className="fr-fi-arrow-down-s-line mt-1 ml-1 scale-90 ml-auto"
  />
</button>
`;
